'fix css overlap issues with watched to watch and list items'

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -40,15 +40,14 @@ button {
   text-align: center;
 }
 .watched-tab {
-  float: left;
+  margin: 3px;
   border: 1px solid grey;
-  padding: 1px;
+  padding: 3px;
 }
 .to-watch-tab {
-  float: left;
-  margin: 0px 0px 0px 5px;
+  margin: 3px;
   border: 1px solid grey;
-  padding: 1px;
+  padding: 3px;
 }
 
   /*---------- hover states------------- */
